# Cub3D

./: .gitignore  CMakeLists.txt  Makefile
inc/: Cub3D.h
mlx_example/: 01_untextured_raycast.c  04_floor_ceiling.c  05_sprite_raycast.c  Makefile  cub3D
result/: Cub3D  Makefile
result/gnl/: get_next_line.c  get_next_line_utils.c
result/inc/: Cub3D.h
result/map/: map1.cub  map2.cub  map3.cub  map_subject.cub
result/src/: Cub3D.c  before_calculate_floor.c  before_load_texture.c  before_map_parse.c  calculate.c  calculate_ceil.c  calculate_floor.c  calculate_wall.c  draw_floor.c  engine.c  engine_run.c  get_next_line.c  hook.c  init.c  init2.c  init_map.c  load_texture.c  loop_hook.c  map_parse.c  map_parse2.c  map_setting.c  mov_cal.c  movement.c  movement2.c  parse.c  save_map.c  texture_set.c  utils.c  utils2.c  wall_cast.c
src/: Cub3D.c  calculate_wall.c  check_map.c  flood_fill.c  get_direction.c  hook_func.c  init.c  init2.c  loop_hook.c  map_parse.c  map_parse2.c  map_parse3.c  mov_cal.c  save_map.c  utils.c  wall_cast.c
